# ChangeLog for app-text/zekr
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 May 2007; <serkan_kaba@yahoo.com> +zekr-0.6.0_beta1.ebuild:
  Version bump

  29 Apr 2007; Serkan Kaba <serkan_kaba@yahoo.com> zekr-0.5.0.ebuild:
  Added runtime swt USE flag checking.

  23 Apr 2007; Serkan Kaba <serkan_kaba@yahoo.com> zekr-0.5.0.ebuild:
  Initial commit.