@@ -1,8 +1,7 @@
-AUX pre 240 RMD160 36480db00f740b3a942563065e336b7bda55a219 SHA1 0782144f5a915371741897bb7b621adfbb6b7624 SHA256 b36c0c53a26a1c34ebd99b6c541bec2849f5c0e282637cffd639d028928fc57a
 AUX zekr.png 4221 RMD160 eefc8987c5b00bfd9ef13379bead031e459891a0 SHA1 b0261281aaf9cd4266d9ad8afbb84672241a7170 SHA256 73e59073b4101613371e8be7bf20dea13fd68a4abbc70afe22f9f39fdbea3f9d
 DIST zekr-0.5.0-linux.tar.gz 4587649 RMD160 084e2e530bf3efc31bc9c69566ff07245289a71e SHA1 d1a23f9f67e78e8fd1460c0821325271733a392e SHA256 9133f0745e427abfd277fe0e419f68a5fb4c27db62f89dcc083da6340ccf4d20
 DIST zekr-0.6.0beta1-linux.tar.gz 4787172 RMD160 0fa6314491d9af31dcdc3caa39050896baae0e8b SHA1 4d4caf51e43cccceedf71ac8a2a2635338a4e2c9 SHA256 f5977fd573ceb44e835d435dcfa1747e19c1956c7442b7cad727716a02ab30ec
 EBUILD zekr-0.5.0.ebuild 1724 RMD160 bad148833cbe924c4619b241e19fae2e839a6f85 SHA1 215cd2c882e522e8a2820473f424e81b941a8fa0 SHA256 79614a0e8c1faec759fc8e6b214bf030037a8f78f872ca1c1d9c729dc15f67c2
-EBUILD zekr-0.6.0_beta1.ebuild 1977 RMD160 0c5584c6c7acab9597d012584f2eef8efc4fbc49 SHA1 6c883427f31f16e104aa27f5360decda9b57771f SHA256 6a24f4b33a5b88b35ae40d2e901a5c8b6b74400a89427d3a5c61d9324cf72808
-MISC ChangeLog 393 RMD160 13b971dd1883d91ef88054767193d5383f95734f SHA1 ae74b6fc635d209195a6393a609519660d327bbe SHA256 d19710e45f5329d5976f4645f2b9572febf5d64f689eeadb6538e4073502344f
+EBUILD zekr-0.6.0_beta1.ebuild 1967 RMD160 afba49f779ea694e228e0c7037b47ce28c891d9b SHA1 c625e96bdd28c851167e3db2ade211b59078b1fb SHA256 06875f71c1485a677b450746fafcea0ae3dec50c2341b2bc80abc07b1afcc674
+MISC ChangeLog 555 RMD160 f2bfe1836fe41636e7482d45e69e359bae1ba185 SHA1 98a6cc17e0e3840b39f2154418345824fa0116b6 SHA256 c40dc0fe321abb3b94319f59b65bc6aacb222954e1a4f7f735c714f96b12b8cc
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
